# legal-query

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/autogen_chat/: __init__.py  autogen_chat.py  user_proxy_webagent.py
backend/app/misc/: settings.py
backend/app/rag/: chroma_store.py  chunking_strategies.py  rag_pipeline.py  rag_utils.py  run_rag.py  streamlit_app.py  utils.py
frontend/: Dockerfile
frontend/app/src/components/chat/layout/: Navigator.jsx
notebooks/: cohere_reranking.ipynb  cohere_semanticchunk_ragas_test.ipynb  hypothetical_document_embeddings.ipynb  ragas_rag_pipeline.ipynb
notebooks/autogen/: agentchat_RetrieveChat.ipynb  autogen_intro.ipynb  autogen_rag_retriever.ipynb  legalbert_rag_retriever.ipynb  rag_with_autogen.ipynb
notebooks/chunking/: split_by_sematic_router.ipynb  split_by_tokens_all_mpnet_tokenizer.ipynb  split_semantic_chunking_openai.ipynb
notebooks/sentence_embedding/: compare_Q&A_embeding.ipynb
src/: chunking_strategies.py  env_loader.py  rag_pipeline.py  ragas_pipeline.py  utils.py
src/reranking/: cohere_reranking.py
